# SER321-Assignments

./: .gitignore
Project2/Assign2/: .classpath  .project  build.xml  readme.txt  waypoint.json
Project2/Assign2/src/waypoint/: Waypoint.java  WaypointController.java  WaypointGUI.java
Project3/Assign3/: .project  CMakeLists.txt  build.xml  waypoint.json
Project3/Assign3/src/cpp/: Waypoint.cpp  Waypoint.hpp  WaypointApp.cpp  WaypointGUI.cpp
Project5/: WaypointLibraryMethods.json  build.xml  waypoints.json
Project5/src/cpp/: CMakeLists.txt
Project5/src/cpp/client/: WaypointApp.cpp  WaypointGUI.cpp  waypointcollectionstub.h
Project5/src/cpp/server/: Waypoint.cpp  Waypoint.hpp  WaypointCollection.cpp  WaypointCollection.hpp  WaypointServer.cpp  waypointserverstub.h
Project5/src/java/client/: Waypoint.java  WaypointCollectionHttpProxy.java  WaypointController.java  WaypointGUI.java
Project6/: build.xml
Project6/src/Client/: BrowserController.java  BrowserGUI.java  Page.java
Project6/src/Server/: WebServer.java
Project6/www/Ser321/: 404.html  index.html
Project6/www/Ser321/Assigns/Assign4/: assign4.html
Project6/www/Ser321/ClassNotes/: cnBackground.rtf  cnCmdLineEditCompileDebug.rtf  cnSerialization.rtf  overheads.html
Project6/www/Ser321/Resources/: buildRaspberry.html  tools.html
Project6/www/Ser321/Syllabus/: syllabus.html
Project6/www/Ser321/Syllabus/docs/: Ser321Syllabus.rtf
